Fix overflow problem

--- a/client/web/src/repo/RepoLinkPicker.module.scss
+++ b/client/web/src/repo/RepoLinkPicker.module.scss
@@ -13,6 +13,7 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     border-right: none;
+    white-space: nowrap;
 }
 
 .dropdown-button {
